Refactor, Add advanced exapmles and weight tying

--- a/demo.ipynb
+++ b/demo.ipynb
@@ -10,7 +10,7 @@
    "outputs": [],
    "source": [
     "import torch\n",
-    "from minlora import add_lora, apply_to_lora, disable_lora, enable_lora, get_lora_params, merge_lora, name_is_lora, remove_lora, load_multiple_lora, select_lora\n",
+    "from minlora import add_lora, apply_to_lora, disable_lora, enable_lora, get_lora_params, merge_lora, name_is_lora, remove_lora, load_multiple_lora, select_lora, get_lora_state_dict\n",
     "_ = torch.set_grad_enabled(False)"
    ]
   },
@@ -26,7 +26,7 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "tensor([[-0.0900, -0.2352, -0.0682]])\n"
+      "tensor([[-0.3555, -0.0929,  0.6221]])\n"
      ]
     }
    ],
@@ -71,7 +71,7 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "tensor([[-0.1473, -0.2666, -0.2150]])\n"
+      "tensor([[-0.4703, -0.3157,  0.4262]])\n"
      ]
     }
    ],
@@ -133,9 +133,7 @@
    ],
    "source": [
     "# let's save the state dict for later use\n",
-    "state_dict = model.state_dict()\n",
-    "# we only need to save the lora parameters\n",
-    "state_dict_to_save = {k: v for k, v in state_dict.items() if name_is_lora(k)}\n",
+    "state_dict_to_save = get_lora_state_dict(model)\n",
     "state_dict_to_save.keys()"
    ]
   },
@@ -321,9 +319,9 @@
     {
      "data": {
       "text/plain": [
-       "(tensor([[-2.6807,  0.3169,  0.3769]]),\n",
-       " tensor([[-2.0904, -0.4559, -0.8377]]),\n",
-       " tensor([[-1.1104,  0.5241,  0.1423]]))"
+       "(tensor([[-0.6234,  2.2759, -0.9541]]),\n",
+       " tensor([[2.4910, 3.4921, 1.5635]]),\n",
+       " tensor([[ 0.3378,  1.3389, -0.5897]]))"
       ]
      },
      "execution_count": 15,
@@ -345,9 +343,9 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "tensor([[-2.6807,  0.3169,  0.3769]])\n",
-      "tensor([[-2.0904, -0.4559, -0.8377]])\n",
-      "tensor([[-1.1104,  0.5241,  0.1423]])\n"
+      "tensor([[-0.6234,  2.2759, -0.9541]])\n",
+      "tensor([[2.4910, 3.4921, 1.5635]])\n",
+      "tensor([[ 0.3378,  1.3389, -0.5897]])\n"
      ]
     }
    ],
@@ -373,7 +371,7 @@
    "notebook_metadata_filter": "-all"
   },
   "kernelspec": {
-   "display_name": "arts",
+   "display_name": "lora",
    "language": "python",
    "name": "python3"
   },
@@ -387,11 +385,11 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.9.12"
+   "version": "3.9.16"
   },
   "vscode": {
    "interpreter": {
-    "hash": "ec4ef7a69b39de4abfd19e318c0673bee0fdd82038ee5662d29a26343180dee4"
+    "hash": "cd38cab5b092fbce1866c43acaed152c77b80a12cd5e2b7fb23112c1a171e061"
    }
   }
  },
